Remove experimental features